--- a/DEV/js/modules/SchoolHome.css
+++ b/DEV/js/modules/SchoolHome.css
@@ -2,6 +2,7 @@
 	.user{
 		strong{
 				cursor: context-menu;
+				font-weight: normal;
 			}
 	}
 }
@@ -92,5 +93,20 @@
 			line-height: 18px;
 			padding: 30px 0 30px 30px;
 		}
+	}
+}
+.pub_list{
+	.flagship, .direct, .cooperation{
+	    padding: 14px 19px;
+	    background-image: url(../../images/icon_flagship.png);
+	    background-size: 28px 37px;
+	    background-position: 0 center;
+	    background-repeat: no-repeat;
+	}
+	.direct{
+	    background-image: url(../../images/icon_direct.png);
+	}
+	.cooperation{
+	    background-image: url(../../images/icon_cooperation.png);
 	}
 }
