--- a/DEV/js/modules/ZoneAddClass.css
+++ b/DEV/js/modules/ZoneAddClass.css
@@ -29,12 +29,14 @@
 	.body{
 		max-height: 400px;
 		overflow: auto;
-		li{
-			input[type=checkbox]{
-				/*zoom:160%;*/
-				transform:scale(1.4);
-				cursor: pointer;  
-			}
-		}
+	}
+	input[type=checkbox]{
+		/*zoom:160%;*/
+		transform:scale(1.4);
+		cursor: pointer;  
 	}	
+}
+
+.pub_list .content .head{
+	display: flex;
 }
