--- a/DEV/js/modules/ZoneAddClass.css
+++ b/DEV/js/modules/ZoneAddClass.css
@@ -45,7 +45,16 @@
 	display: flex;
 }
 .getZoneStudentList{
+	span{
+		padding: 0 3px;
+		margin: 0 5px;
+		white-space: nowrap;
+		cursor: pointer;
+		display: inline-block;
+	}
 	.checked{
 		color: #060;
+		/*background: #ddd;*/
+		text-decoration: underline;
 	}
 }
