--- a/DEV/js/modules/SchoolLogin.css
+++ b/DEV/js/modules/SchoolLogin.css
@@ -1,95 +1,141 @@
-/*button{
-	border-radius: 4px;
-	background-color: #C6C9CE;
-	border: 1px solid #C6C9CE;
-	box-shadow: none;
-	color: #FFF;
-	font-size: 14px;
-	line-height: 14px;
-	min-width: 138px;
-	height: 36px;
-	padding: 11px 0;
-	font-weight: 100;
-	&:focus{
-		outline: none;
+body{
+	background: url(../../images/bg_login.jpg) center top;
+	background-size: 1920px 1080px;
+	overflow: auto;
+}
+.page_main{
+	width: 760px;
+	height: 930px;
+	margin: 0 auto;
+	.nav{
+		padding: 210px 30px 0;
+		display: flex;
+		h6{
+			font-weight: normal;
+			flex: 1;
+			height: 70px;
+			line-height: 70px;
+			text-align: center;
+			color: #6e6e6e;
+			font-size: 26px;
+			cursor: pointer;
+			position: relative;
+			.ico{
+				display: none;
+				border: 6px solid #00bfa8;
+				position: absolute;
+				left: 50%;
+				bottom: -6px;
+				transform: translate( -50%, 0 ) rotate(45deg);
+			}
+			&.on{
+				color: #fff;
+				.ico{
+					display: block;
+				}
+			}
+		}
+
 	}
-	&.on{
-		background-color: #4580D3;
-		border-color: #4580D3;
-		cursor: pointer;
-		&:hover{
-			background-color: #1690F3;
+	.type{
+		height: 80px;
+		padding: 0 110px;
+		font-size: 20px;
+		line-height: 80px;
+		color: #cccfce;
+		label{
+			margin: 0 30px 0;
+			cursor: pointer;
+		}
+	}
+	.pub_form{
+		padding: 0;
+		ul{
+			padding-bottom: 20px;
+		}
+		li{
+			padding: 20px 0;
+			input{
+				display: block;
+				margin: 0 auto;
+				width: 500px;
+				height: 64px;
+				font-size: 20px;
+				border: 1px solid #d3d3d3;
+				border-radius: 5px;
+				padding: 0 10px 0 56px;
+				&.mobile{
+					background: url(../../images/ico_login_1.png) 8px center no-repeat;
+				}
+				&.password{
+					background: url(../../images/ico_login_2.png) 14px center no-repeat;
+				}
+			}
+		}
+		.btn{
+			width: 500px;
+			height: 68px;
+			line-height: 68px;
+			font-size: 26px;
+			color: #2fc5ab;
+			border: 1px solid #2fc5ab;
+			background: none;
+			padding: 0;
+			display: block;
+			margin: 0 auto;
+		}
+
+	}
+	.info{
+		padding: 152px 0 0;
+		display: flex;
+		justify-content: space-between;
+		a{
+			width: 130px;
+			height: 130px;
 		}
 	}
 }
-.content{
-	.zoneList{
-		background-color: #FFF;
-		margin-top: 20px;
-		.titleBox{
-			padding: 24px;
-			h3{
-				color: #3A3C40;
-				font-size: 18px;
-				line-height: 18px;
-				padding: 9px 0 9px 30px;
-				display: inline-block;
-				width: auto;
-			}
-			button{
-				float: right;
-				i{
-					font-size: 22px;
-					vertical-align: middle;
-					display: inline-block;
-					line-height: 11px;
-					margin-right: 8px;
-					margin-bottom: 4px;
-				}
-			}
 
-		}
-		.listBox{
-			background-color: #FFF;
-			.title{
-				background-color: #FCFCFC;
-				color: #AAAEB2;
-				border-top: 1px solid #EAEAEA;
-				border-bottom: 1px solid #EAEAEA;
-				span{
-					display: inline-block;
-					font-size: 14px;
-					line-height: 14px;
-					padding: 14px 0;
-					padding-left: 30px;
-					vertical-align: middle;
-					width: 15%;
-					&:nth-child(2){
-						width: 12%;
-					}
-					&:nth-child(4){
-						width: 25%;
-					}
-				}
-			}
-			.list{
-				color: #3A3C40;
-				font-size: 16px;
-				border-bottom: 1px solid #EAEAEA;
-				span{
-					display: inline-block;
-					padding: 34px 0;
-					padding-left: 30px;
-					vertical-align: middle;
-					width: 15%;
-					&:nth-child(2){
-						width: 12%;
-					}
-					&:nth-child(4){
-						width: 25%;
-					}
-				}
-			}
-		}
-	}
-}*/
+
+  /*二维码登录*/
+  .qrcodeLoginBox{
+    line-height: 24px;
+    font-size: 18px;
+    .qrcode{
+      height: 272px;
+      overflow: hidden;
+    }
+    img{
+      display: block;
+      width: 240px;
+      height: 240px;
+      margin: 22px auto 10px;
+    }
+    p{
+      padding: 0 32px;
+      text-align: center;
+    }
+  }
+  /*登录状态*/
+  .loginStatus_success, .loginStatus_error{
+      margin: 100px auto 0 auto;
+      padding-top: 120px;
+      background-image: url(../../images/ico_loginStatus.png);
+      background-size: 120px 320px;
+      background-position: center 0;
+      background-repeat: no-repeat;
+      p{
+        padding: 25px 32px;
+        text-align: center;
+        background: #fff;
+      }
+      .btn{
+        display: block;
+        margin: 0 auto;
+
+      }
+  }
+  .loginStatus_error{
+    background-position: center -200px;
+  }
