--- a/DEV/js/modules/zoneHome.css
+++ b/DEV/js/modules/zoneHome.css
@@ -1,102 +1,251 @@
-.page_head{
-	input[type=text]{
-      color: #212224;
-      font-size: 14px;
-      line-height: 18px;
-      padding: 8px;
-      border-radius: 4px;
-      width: 366px;
-    }
-}
-.class_show{
-	padding: 0 30px;
-	.list_box{
-		max-height: 475px;
-		overflow: auto;
+.calendar_box{
+	height: 600px;
+	overflow: hidden;
+	background: #fff;
+	.calendar_list{
+		height: 600px;
+		width: 67%;
+		float: left;
 	}
-	.item_box{
-		margin: 15px 0;
-		min-height: 65px;
-		position: relative;
-		.item{
-			width: 125px;
-			height: 65px;
-			border-left: 2px solid #3580D9;
-			background: #eaf2fb;
-			position: absolute;
-			padding: 11px 5px 10px 5px;
-			line-height: 22px;
-			font-size: 12px;
+	.calendar_info{
+		height: 800px;
+		width: 33%;
+		float: left;
+		padding: 20px 20px 0 24px;
+		height: 600px;
+		overflow: auto;
+		li{
+			padding: 8px;
+			border-left: 2px solid #d7d6d6;
+			position: relative;
+			cursor: pointer;
+			color: #747474;
+			em{
+				position: absolute;
+				left: -7px;
+				top: 16px;
+				width: 12px;
+				height: 12px;
+				border-radius: 50%;
+				background: #747474;
+			}
 			h6{
-				font-size: 12px;
-				color: #354052;
+				color: #747474;
+				font-size: 18px;
+				line-height: 28px;
 				font-weight: normal;
 			}
 			p{
+				display: flex;
+				font-size: 12px;
+				line-height: 24px;
+				span{
+					flex: 1;
+				}
 			}
-			span{
-				position: absolute;
-				right: 10px;
-				top: 0;
-			}
-			.mark{
-				color: #F14949;
+			&:hover, &.on{
+				h6{
+					color: #e42323;
+				}
+				em{
+					background: #e42323;
+				}
 			}
 		}
 	}
-	.times{
-		display: flex;
-		border-top: 1px solid #AAAEB3;
-		color: #AAAEB3;
-		line-height: 30px;
-		font-size: 12px;
-		justify-content:space-between;
-		span{
-			/*flex: 1;*/
-			display: inline;
+
+
+
+
+
+
+
+
+/*#CalendarMain {
+	width: 500px;
+	height: 500px;
+	border: 1px solid #ccc;
+	margin: 0 auto;
+	margin-top: 100px;
+}*/
+#title {
+	width: 100%;
+	height: 30px;
+	background-color: #b9121b;
+}
+.selectBtn {
+	font-weight: 900;
+	font-size: 15px;
+	color: #fff;
+	cursor: pointer;
+	text-decoration: none;
+	padding: 7px 10px 6px 10px;
+}
+.selectBtn:hover {
+	background-color: #1d953f;
+}
+.selectYear {
+	float: left;
+	margin-left: 50px;
+	position: absolute;
+}
+.selectMonth {
+	float: left;
+	margin-left: 120px;
+	position: absolute;
+}
+.month {
+	float: left;
+	position: absolute;
+}
+.nextMonth {
+	float: right;
+}
+.currentDay {
+	float: right;
+}
+.addLesson{
+	float: right;
+}
+#context {
+	background-color: #fff;
+	width: 100%;
+}
+.week {
+	width: 100%;
+	height: 30px;
+
+	display: flex;
+}
+.week span {
+	color: #808080;
+	text-align: center;
+	margin: 0;
+	padding: 0;
+	margin-top: 5px;
+	font-size: 20px;
+
+	flex: 1;
+}
+.dayItem {
+	/*float: left;*/
+	display: flex;
+	flex-direction: row;
+    flex-wrap: wrap;
+    height: 405px;
+}
+.lastItem {
+	color: #d1c7b7 !important;
+}
+.item {
+	width: 14.285%;
+	color: #333;
+	float: left;
+	text-align: center;
+	cursor: pointer;
+	margin: 0;
+	font-family: "微软雅黑";
+	font-size: 20px;
+	position: relative;
+}
+.item a{
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate( -50%, -50% );
+}
+.item:hover {
+	color: #b9121b;
+}
+.currentItem>a {
+	background-color: #b9121b;
+	width: 36px;
+	line-height: 36px;
+	float: left;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+	color: #fff;
+}
+#centerCalendarMain {
+	overflow: hidden;
+	float: left;
+}
+#center {
+	width: 100%;
+	overflow: hidden;
+}
+#centerMain {
+	width: 300%;
+	margin-left: -100%;
+}
+#selectYearDiv {
+	float: left;
+	background-color: #fff;
+}
+#selectYearDiv>div {
+	float: left;
+	text-align: center;
+	font-family: "微软雅黑";
+	font-size: 16px;
+	border: 1px solid #ccc;
+	margin-left: -1px;
+	margin-top: -1px;
+	cursor: pointer;
+	color: #909090;
+}
+.currentYearSd, .currentMontSd {
+	color: #ff4400 !important;
+}
+#selectMonthDiv {
+	float: left;
+	background-color: #fff;
+}
+#selectMonthDiv>div {
+	color: #909090;
+	float: left;
+	text-align: center;
+	font-family: "微软雅黑";
+	font-size: 16px;
+	border: 1px solid #ccc;
+	margin-left: -1px;
+	margin-top: -1px;
+	cursor: pointer;
+}
+#selectYearDiv>div:hover, #selectMonthDiv>div:hover {
+	background-color: #efefef;
+}
+
+
+
+
+
+
+}
+.info_box{
+	display: flex;
+	height: 180px;
+	margin-top: 20px;
+	background: #fff;
+	.lesson_box{
+		flex: 3;
+		color: #747474;
+		h6{
+			font-size: 14px;
+			line-height: 26px;
+			font-weight: normal;
 		}
+		p{
+			font-size: 12px;
+			line-height: 24px;
+		}
+	}
+	.student_box{
+		flex: 5;
+	}
+	.qr_box{
+		flex: 1;
 	}
 }
-.class_info{
-	padding: 60px 30px 30px;
-	line-height: 40px;
-	span{
-		padding-right: 20px;
-	}
-}
 
 
-
-	.echartsBox{
-		background-color: #FFF;
-		margin-bottom: 20px;
-		position: relative;
-		padding: 30px;
-		.selectBox{
-			position: absolute;
-			top: 30px;
-			left: 300px;
-			z-index: 1;
-		}
-		.echarts{
-			height: 427px;
-		}
-	}
-	input[type=text],input[type=date], input[type=week], input[type=month], input[type=number], input[type=password], textarea {
-      color: #212224;
-      font-size: 14px;
-      line-height: 18px;
-      padding: 8px;
-      border-radius: 4px;
-      width: 200px;
-    }
-    .entey_date{
-    	margin: 0 4px 0 3px;
-    	height: 32px;
-    }
-    .btn{
-    	height: 34px;
-    }
-	.echartSelect_zone{
-		width:200px;
-	}
