--- a/DEV/js/modules/zoneHome.css
+++ b/DEV/js/modules/zoneHome.css
@@ -29,6 +29,15 @@
 				border-radius: 50%;
 				background: #747474;
 			}
+			b{
+				position: absolute;
+				width: 19px;
+				height: 23px;
+				right: 20px;
+				top: 20px;
+				background: url(../../images/icon_del.png) center center no-repeat;
+				display: none;
+			}
 			h6{
 				color: #747474;
 				font-size: 18px;
@@ -37,7 +46,7 @@
 			}
 			p{
 				display: flex;
-				font-size: 12px;
+				font-size: 14px;
 				line-height: 24px;
 				span{
 					flex: 1;
@@ -50,202 +59,264 @@
 				em{
 					background: #e42323;
 				}
+				b{
+					display: block;
+				}
 			}
 		}
 	}
 
+	.calendar_head {
+		height: 80px;
+		line-height: 80px;
+		padding: 0 40px;
+		.linkBox{
+			line-height: 30px;
+			margin-top: 25px;
+			float: right;
+			a{
+				display: inline-block;
+				background: #f5f5f5;
+				color: #7f7f7f;
+				padding: 0 8px;
+				font-size: 16px;
+			}
+			.addLesson{
+				padding-left: 30px;
+				background: url(../../images/icon_add_lesson.png) 4px center no-repeat #f5f5f5;
+				background-size: 20px 20px;
+				&:hover{
+					background: url(../../images/icon_add_lesson.png) 4px center no-repeat #ccc;
+				}
+			}
+			.msg{
+				padding-left: 30px;
+				background: url(../../images/icon_msg.png) 4px center no-repeat #f5f5f5;	
+				background-size: 20px 20px;
+				&:hover{
+					background: url(../../images/icon_msg.png) 4px center no-repeat #ccc;
+				}
+			}
+		}
+	}
+	.selectBtn {
+		font-weight: 900;
+		font-size: 16px;
+		color: #747474;
+		cursor: pointer;
+		text-decoration: none;
+	}
+	.selectYear, .selectMonth, b {
+		font-weight: normal;
+		color: #e42323;
+		font-size: 36px;
+	}
+	.month {
+		float: left;
+		position: absolute;
+	}
+	.nextMonth {
+		float: right;
+	}
+	.currentDay {
+		float: right;
+	}
+	#context {
+		background-color: #fff;
+		width: 100%;
+	}
+	.week {
+		width: 100%;
+		height: 30px;
 
+		display: flex;
+	}
+	.week span {
+		color: #808080;
+		text-align: center;
+		margin: 0;
+		padding: 0;
+		margin-top: 5px;
+		font-size: 20px;
 
+		flex: 1;
+	}
+	.dayItem {
+		/*float: left;*/
+		display: flex;
+		flex-direction: row;
+	    flex-wrap: wrap;
+	    height: 480px;
+	}
+	.item {
+		width: 14.285%;
+		color: #333;
+		float: left;
+		text-align: center;
+		cursor: pointer;
+		margin: 0;
+		font-family: "微软雅黑";
+		font-size: 20px;
+		position: relative;
+	}
+	.item a{
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translate( -50%, -50% );
+	}
+	.item:hover {
+		color: #b9121b;
+	}
+	.currentItem>a {
+		background-color: #b9121b;
+		width: 36px;
+		line-height: 36px;
+		float: left;
+		-webkit-border-radius: 50%;
+		-moz-border-radius: 50%;
+		border-radius: 50%;
+		color: #fff;
+	}
+	.lastItem {
+		color: #d1c7b7;
+	    cursor: no-drop;
+	    &:hover{
+			color: #d1c7b7;
+	    }
+	}
+	#centerCalendarMain {
+		overflow: hidden;
+		float: left;
+	}
+	#center {
+		width: 100%;
+		overflow: hidden;
+	}
+	#centerMain {
+		width: 300%;
+		margin-left: -100%;
+	}
+	#selectYearDiv {
+		float: left;
+		background-color: #fff;
+	}
+	#selectYearDiv>div {
+		float: left;
+		text-align: center;
+		font-size: 20px;
+		border: 1px solid #ccc;
+		margin-left: -1px;
+		margin-top: -1px;
+		cursor: pointer;
+		color: #909090;
+	}
+	#selectYearDiv div:last-child{
+		border-right: none;
 
-
-
-
-
-/*#CalendarMain {
-	width: 500px;
-	height: 500px;
-	border: 1px solid #ccc;
-	margin: 0 auto;
-	margin-top: 100px;
-}*/
-#title {
-	width: 100%;
-	height: 30px;
-	background-color: #b9121b;
-}
-.selectBtn {
-	font-weight: 900;
-	font-size: 15px;
-	color: #fff;
-	cursor: pointer;
-	text-decoration: none;
-	padding: 7px 10px 6px 10px;
-}
-.selectBtn:hover {
-	background-color: #1d953f;
-}
-.selectYear {
-	float: left;
-	margin-left: 50px;
-	position: absolute;
-}
-.selectMonth {
-	float: left;
-	margin-left: 120px;
-	position: absolute;
-}
-.month {
-	float: left;
-	position: absolute;
-}
-.nextMonth {
-	float: right;
-}
-.currentDay {
-	float: right;
-}
-.addLesson{
-	float: right;
-}
-#context {
-	background-color: #fff;
-	width: 100%;
-}
-.week {
-	width: 100%;
-	height: 30px;
-
-	display: flex;
-}
-.week span {
-	color: #808080;
-	text-align: center;
-	margin: 0;
-	padding: 0;
-	margin-top: 5px;
-	font-size: 20px;
-
-	flex: 1;
-}
-.dayItem {
-	/*float: left;*/
-	display: flex;
-	flex-direction: row;
-    flex-wrap: wrap;
-    height: 405px;
-}
-.lastItem {
-	color: #d1c7b7 !important;
-}
-.item {
-	width: 14.285%;
-	color: #333;
-	float: left;
-	text-align: center;
-	cursor: pointer;
-	margin: 0;
-	font-family: "微软雅黑";
-	font-size: 20px;
-	position: relative;
-}
-.item a{
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate( -50%, -50% );
-}
-.item:hover {
-	color: #b9121b;
-}
-.currentItem>a {
-	background-color: #b9121b;
-	width: 36px;
-	line-height: 36px;
-	float: left;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	border-radius: 50%;
-	color: #fff;
-}
-#centerCalendarMain {
-	overflow: hidden;
-	float: left;
-}
-#center {
-	width: 100%;
-	overflow: hidden;
-}
-#centerMain {
-	width: 300%;
-	margin-left: -100%;
-}
-#selectYearDiv {
-	float: left;
-	background-color: #fff;
-}
-#selectYearDiv>div {
-	float: left;
-	text-align: center;
-	font-family: "微软雅黑";
-	font-size: 16px;
-	border: 1px solid #ccc;
-	margin-left: -1px;
-	margin-top: -1px;
-	cursor: pointer;
-	color: #909090;
-}
-.currentYearSd, .currentMontSd {
-	color: #ff4400 !important;
-}
-#selectMonthDiv {
-	float: left;
-	background-color: #fff;
-}
-#selectMonthDiv>div {
-	color: #909090;
-	float: left;
-	text-align: center;
-	font-family: "微软雅黑";
-	font-size: 16px;
-	border: 1px solid #ccc;
-	margin-left: -1px;
-	margin-top: -1px;
-	cursor: pointer;
-}
-#selectYearDiv>div:hover, #selectMonthDiv>div:hover {
-	background-color: #efefef;
-}
-
-
-
-
+	}
+	.currentYearSd, .currentMontSd {
+		color: #ff4400 !important;
+	}
+	#selectMonthDiv {
+		float: left;
+		background-color: #fff;
+	}
+	#selectMonthDiv>div {
+		color: #909090;
+		float: left;
+		text-align: center;
+		font-size: 20px;
+		border: 1px solid #ccc;
+		margin-left: -1px;
+		margin-top: -1px;
+		cursor: pointer;
+	}
+	#selectYearDiv>div:hover, #selectMonthDiv>div:hover {
+		background-color: #efefef;
+	}
 
 
 }
 .info_box{
 	display: flex;
-	height: 180px;
+	min-height: 200px;
 	margin-top: 20px;
+	padding: 15px;
 	background: #fff;
+	border-left: 3px solid #e42323;
 	.lesson_box{
 		flex: 3;
 		color: #747474;
 		h6{
 			font-size: 14px;
-			line-height: 26px;
+			line-height: 28px;
 			font-weight: normal;
+			display: flex;
+			span{
+				flex: 1;
+			}
 		}
 		p{
-			font-size: 12px;
-			line-height: 24px;
+			font-size: 14px;
+			line-height: 28px;
 		}
 	}
 	.student_box{
 		flex: 5;
+		min-height: 150px;
+		border-left: 3px solid #e2e2e2;
+		cursor: pointer;
+		p{
+			padding: 8px 10px;
+			line-height: 24px;
+		}
+		b{
+			font-size: 16px;
+			padding-right: 10px;
+			color: #747474;
+		}
+		span{
+			padding: 0 5px;
+			color: #979797;
+		}
 	}
 	.qr_box{
 		flex: 1;
+		.qr_img{
+			width: 150px;
+			height: 150px;			
+		}
+		img{
+			width: 150px;
+			height: 150px;
+		}
+		p{
+			line-height: 20px;
+			font-size: 14px;
+			text-align: center;
+		}
 	}
 }
+
+.getZoneStudentList, .addLessonPop_getZoneStudentList, .student_box_getZoneStudentList{
+	.classItem{
+		display: none;
+		line-height: 28px;
+	}
+	span{
+		padding: 0 3px;
+		margin: 0 5px;
+		white-space: nowrap;
+		cursor: pointer;
+		display: inline-block;
+	}
+	.checked{
+		color: #060;
+		/*background: #ddd;*/
+		text-decoration: underline;
+	}
+}
+
 
 
