--- a/DEV/js/modules/zoneHome.css
+++ b/DEV/js/modules/zoneHome.css
@@ -128,18 +128,17 @@
 	.week {
 		width: 100%;
 		height: 30px;
-
 		display: flex;
-	}
-	.week span {
-		color: #808080;
-		text-align: center;
-		margin: 0;
-		padding: 0;
-		margin-top: 5px;
-		font-size: 20px;
+		span {
+			color: #808080;
+			text-align: center;
+			margin: 0;
+			padding: 0;
+			margin-top: 5px;
+			font-size: 20px;
 
-		flex: 1;
+			flex: 1;
+		}
 	}
 	.dayItem {
 		/*float: left;*/
@@ -155,28 +154,29 @@
 		text-align: center;
 		cursor: pointer;
 		margin: 0;
-		font-family: "微软雅黑";
 		font-size: 20px;
 		position: relative;
+		a{
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			transform: translate( -50%, -50% );
+		}
+		&:hover {
+			color: #b9121b;
+		}
 	}
-	.item a{
-		position: absolute;
-		left: 50%;
-		top: 50%;
-		transform: translate( -50%, -50% );
-	}
-	.item:hover {
-		color: #b9121b;
-	}
-	.currentItem>a {
-		background-color: #b9121b;
-		width: 36px;
-		line-height: 36px;
-		float: left;
-		-webkit-border-radius: 50%;
-		-moz-border-radius: 50%;
-		border-radius: 50%;
-		color: #fff;
+	.currentItem{
+		a {
+			background-color: #b9121b;
+			width: 36px;
+			line-height: 36px;
+			float: left;
+			-webkit-border-radius: 50%;
+			-moz-border-radius: 50%;
+			border-radius: 50%;
+			color: #fff;
+		}
 	}
 	.lastItem {
 		color: #d1c7b7;
@@ -201,19 +201,23 @@
 		float: left;
 		background-color: #fff;
 	}
-	#selectYearDiv>div {
-		float: left;
-		text-align: center;
-		font-size: 20px;
-		border: 1px solid #ccc;
-		margin-left: -1px;
-		margin-top: -1px;
-		cursor: pointer;
-		color: #909090;
-	}
-	#selectYearDiv div:last-child{
+	#selectYearDiv{
+		div {
+			float: left;
+			text-align: center;
+			font-size: 20px;
+			border: 1px solid #ccc;
+			margin-left: -1px;
+			margin-top: -1px;
+			cursor: pointer;
+			color: #909090;
+		}
+		div:last-child{
 		border-right: none;
-
+		}
+		div:hover {
+			background-color: #efefef;
+		}
 	}
 	.currentYearSd, .currentMontSd {
 		color: #ff4400 !important;
@@ -221,19 +225,19 @@
 	#selectMonthDiv {
 		float: left;
 		background-color: #fff;
-	}
-	#selectMonthDiv>div {
-		color: #909090;
-		float: left;
-		text-align: center;
-		font-size: 20px;
-		border: 1px solid #ccc;
-		margin-left: -1px;
-		margin-top: -1px;
-		cursor: pointer;
-	}
-	#selectYearDiv>div:hover, #selectMonthDiv>div:hover {
-		background-color: #efefef;
+		div {
+			color: #909090;
+			float: left;
+			text-align: center;
+			font-size: 20px;
+			border: 1px solid #ccc;
+			margin-left: -1px;
+			margin-top: -1px;
+			cursor: pointer;
+		}
+		div:hover {
+			background-color: #efefef;
+		}
 	}
 
 
