--- a/DEV/js/modules/ZoneAddClass.css
+++ b/DEV/js/modules/ZoneAddClass.css
@@ -45,6 +45,10 @@
 	display: flex;
 }
 .getZoneStudentList{
+	.classItem{
+		display: none;
+		line-height: 28px;
+	}
 	span{
 		padding: 0 3px;
 		margin: 0 5px;
