--- a/DEV/js/modules/StudentManage.css
+++ b/DEV/js/modules/StudentManage.css
@@ -74,7 +74,7 @@
 	    cursor: pointer;
 	}
 }
-.exitFromClasspPop{
+.exitFromClasspPop, .linkClassPop{
 	p{
 		line-height: 28px;
 		padding: 5px 0 10px;
@@ -83,10 +83,10 @@
 		line-height: 28px;
 		color: #666;
 		margin: 0 10px;
-		text-decoration: underline;
 		cursor: pointer;
 		&.on{
 			color: #c00;
+			text-decoration: underline;
 		}
 	}
 }
