--- a/DEV/js/modules/StudentPrintSituation.css
+++ b/DEV/js/modules/StudentPrintSituation.css
@@ -1,15 +1,35 @@
 .summary{
 	overflow: auto;
 	padding: 5px 20px;
-	span{
-		float: left;
-		width: 30%;
+	display: flex;
+	div{
+		flex: 1;
+		border-right: 1px solid #eee;
+		&:last-child{
+			border-right: none;
+		}
+		h6,span{
+			font-size: 16px;
+			line-height: 30px;
+			font-weight: normal;
+			display: block;
+			width: 100%;
+			text-align: center;
+		}
 	}
 }
-.classList{
-	padding: 20px;
-	span{
-		padding: 10px;
-		white-space: nowrap;
+.run{
+	color: #679fe3;
+}
+.search_item{
+	padding: 40px 50px 30px 50px;
+	.dateSelect{
+	    border: 1px solid #e0e3e8;
+	    border-radius: 4px;
+		color: #212224;
+	    font-size: 14px;
+	    line-height: 18px;
+	    padding: 8px;
+	    width: 220px;
 	}
 }
