--- a/DEV/css/CMD.css
+++ b/DEV/css/CMD.css
@@ -417,6 +417,7 @@ button, input[type=button], .btn, .btn_dis, .btn_grey{
 select {
  /*Chrome和Firefox里面的边框是不一样的，所以复写了一下*/
  border: solid 1px #CED0D9;
+ outline: none;
  /*很关键：将默认的select选择框样式清除*/
  appearance: none;
  -moz-appearance: none;
@@ -434,13 +435,6 @@ select {
 select::-ms-expand {
  display: none;
 }
-
-
-
-
-
-
-
 
 
 label {
