--- a/DEV/js/modules/StudentManage.css
+++ b/DEV/js/modules/StudentManage.css
@@ -4,10 +4,12 @@
 		    overflow: hidden;
 		    width: 0;
 		    height: 0;
-		    padding: 5px;
-		    margin-right: 3px;
+		    padding:12px;
 		    display: inline-block;
-		    background: #c00;
+			background: url(../../images/icon_bind.png) 0 0 no-repeat;
+			background-size: 24px 24px;
+			position: relative;
+			top: 6px;
 		}
 	}
 	.warn{
@@ -22,6 +24,9 @@
 .class_name_list_b{
 	position: relative;
 	padding-right: 12px;
+	select{
+		width: 100%;
+	}
 	a{
 		display: block;
 		width: 100%;
