--- a/DEV/js/modules/AccountSet.css
+++ b/DEV/js/modules/AccountSet.css
@@ -49,6 +49,7 @@
 			padding: 44px 0 44px 32px;
 			h5{
 				margin-bottom: 18px;
+				text-align: center;
 			}
 			.codeImg{
 				text-align: center;
