--- a/DEV/js/modules/LessonOperate.css
+++ b/DEV/js/modules/LessonOperate.css
@@ -32,8 +32,7 @@
 	    max-width: 500px;
 	    b{
 	    	display: inline-block;
-	    	width: 104px;
-	    	text-align: right;
+	    	width: 112px;
 	    }
 	}
 	.list{
@@ -56,7 +55,7 @@
 		padding-top: 10px;
 		line-height: 28px;
 		span{
-			padding: 0 5px;
+			padding-right: 10px;
 		}
 	}
 }
@@ -87,4 +86,7 @@
   opacity: 0.4;
   background: #ccc;
   cursor: no-drop;
+}
+.selectBox select{
+	width: 250px;
 }
