--- a/DEV/js/modules/ZoneHome.css
+++ b/DEV/js/modules/ZoneHome.css
@@ -129,7 +129,10 @@
 	#context {
 		background-color: #fff;
 		width: 100%;
+		height: 360px;
 	}
+
+
 	.week {
 		width: 100%;
 		height: 30px;
@@ -144,7 +147,55 @@
 			flex: 1;
 		}
 	}
+
+	#center{
+		width: 100%;
+		height: 330px;
+		overflow: hidden;
+	}
+
+	#centerMain {
+		width: 300%;
+		height: 330px;
+		margin-left: -100%;
+		overflow: hidden;
+		display: flex;
+	}
+
+
+	#selectYearDiv, #centerCalendarMain, #selectMonthDiv{
+		flex: 1;
+	}
+
+
+	#selectYearDiv{
+		background-color: #fff;
+		overflow: hidden;
+		display: flex;
+		flex-direction: row;
+	    flex-wrap: wrap;
+		span {
+			width: 25%;
+			text-align: center;
+			font-size: 20px;
+			border: 1px solid #ccc;
+			margin-left: -1px;
+			margin-top: -1px;
+			cursor: pointer;
+			color: #909090;
+		}
+		span:last-child{
+		border-right: none;
+		}
+		span:hover {
+			background-color: #efefef;
+		}
+	}
+
+
+
 	.dayItem {
+		width: 100%;
 		/*float: left;*/
 		display: flex;
 		flex-direction: row;
@@ -165,6 +216,7 @@
 			left: 50%;
 			top: 50%;
 			transform: translate( -50%, -50% );
+			color: #747474;
 		}
 		&:hover {
 			color: #b9121b;
@@ -188,40 +240,16 @@
 	    &:hover{
 			color: #d1c7b7;
 	    }
+	    a{
+	    	color: #ddd;
+	    	cursor: no-drop;
+	    	&:hover{
+	    		color: #ddd;
+	    	}
+	    }
 	}
 	#centerCalendarMain {
 		overflow: hidden;
-		float: left;
-	}
-	#center {
-		width: 100%;
-		overflow: hidden;
-	}
-	#centerMain {
-		width: 300%;
-		margin-left: -100%;
-	}
-	#selectYearDiv {
-		float: left;
-		background-color: #fff;
-	}
-	#selectYearDiv{
-		div {
-			float: left;
-			text-align: center;
-			font-size: 20px;
-			border: 1px solid #ccc;
-			margin-left: -1px;
-			margin-top: -1px;
-			cursor: pointer;
-			color: #909090;
-		}
-		div:last-child{
-		border-right: none;
-		}
-		div:hover {
-			background-color: #efefef;
-		}
 	}
 	.currentYearSd, .currentMontSd {
 		color: #ff4400 !important;
@@ -229,9 +257,12 @@
 	#selectMonthDiv {
 		float: left;
 		background-color: #fff;
-		div {
+		display: flex;
+		flex-direction: row;
+	    flex-wrap: wrap;
+		span {
+			width: 25%;
 			color: #909090;
-			float: left;
 			text-align: center;
 			font-size: 20px;
 			border: 1px solid #ccc;
@@ -239,7 +270,7 @@
 			margin-top: -1px;
 			cursor: pointer;
 		}
-		div:hover {
+		span:hover {
 			background-color: #efefef;
 		}
 	}
