--- a/DEV/js/modules/ZoneAddClass.css
+++ b/DEV/js/modules/ZoneAddClass.css
@@ -70,3 +70,20 @@
 .selectBox select{
 	width: 250px;
 }
+
+.selected_lessons, .getZoneStudentList{
+	margin-left: 15px;
+	line-height: 36px;
+	color: #3580d9;
+	&:hover{
+		color: #356ED9;
+	};
+}
+.run_item_add{
+	line-height: 36px;
+	color: #3580d9;
+	font-size: 26px;
+	&:hover{
+		color: #356ED9;
+	};
+}
