--- a/DEV/js/modules/ZoneAddClass.css
+++ b/DEV/js/modules/ZoneAddClass.css
@@ -71,7 +71,7 @@
 	width: 250px;
 }
 
-.selected_lessons, .getZoneStudentList{
+.selected_lessons .checkedList span, .getZoneStudentList .checkedList span{
 	margin-left: 15px;
 	line-height: 36px;
 	color: #3580d9;
